--- a/SASS/_tienda.scss
+++ b/SASS/_tienda.scss
@@ -1,9 +1,9 @@
 .tienda {
 
-    background-color: #322d29;
+    background-image: radial-gradient(ellipse 500px 250px, #2a2a2a, #202020 );
     display: grid;
     grid-template-columns: 1fr;
-    max-height: 1200px;
+    max-height: 2400px;
     grid-template-rows: 150px auto;
     form {
 
@@ -16,12 +16,14 @@
             border-radius: 10px;
             width: 35%;
             height: 40px;
+            font-size: 2rem;
         }
         .buscar{
 
             height: 40px;
             width: 5%;
             border-radius: 10px;
+            font-size: 1.5rem;
         }
     }
     &__productos{
@@ -38,13 +40,13 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: $colorFontAlt;
+            background-color: $colorBG;
             height: 350px;
             width: 300px;
-            border-radius: 10px;
+            border-radius: 5px;
             h2{
 
-                font-size: 30px;
+                font-size: 3rem;
                 text-align: center;
                 font-weight: 700;
                 margin: 0 10px;
@@ -52,7 +54,7 @@
             }
             p {
 
-                font-size: 18px;
+                font-size: 1.8rem;
                 font-weight: 700;
                 text-align: center;
                 margin: 5px 10px;
@@ -105,7 +107,7 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                background-color: #f9feff;
+                background-color: $colorBG;
                 height: 200px;
                 width: 350px;
                 border-radius: 10px;
@@ -117,14 +119,14 @@
                 }
                 h2{
 
-                    font-size: 25px;
+                    font-size: 2.5rem;
                     text-align: center;
                     font-weight: bold;
                     margin: 0 5px;
                 }
                 p{
 
-                    font-size: 15px;
+                    font-size: 1.5rem;
                     font-weight: bold;
                     text-align: center;
                     margin: 5px 5px;
@@ -176,7 +178,7 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                background-color: #f9feff;
+                background-color: $colorBG;
                 height: 200px;
                 width: 300px;
                 border-radius: 10px;
@@ -188,14 +190,14 @@
                 }
                 h2{
 
-                    font-size: 25px;
+                    font-size: 2rem;
                     text-align: center;
                     font-weight: bold;
                     margin: 0 5px;
                 }
                 p{
 
-                    font-size: 15px;
+                    font-size: 1.5rem;
                     font-weight: bold;
                     text-align: center;
                     margin: 5px 5px;
