--- a/SASS/_suscripciones.scss
+++ b/SASS/_suscripciones.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 200px 700px;
-    background-image: url(../img/fondoSuscripciones.jpg);
+    background-image: url(../img/fondoSuscripciones.webp);
     background-size: cover;
     background-repeat: no-repeat;
     &__texto{
@@ -115,7 +115,7 @@
             &__style{
 
                 height: 450px;
-                width: 350px;
+                width: 300px;
             }
         }
     }
